--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -166,7 +166,7 @@
     
 
 
-     <h2 class="px-3 py-4">Publications and Conference Presentations
+     <h2 class="px-3 py-4">Patents, Publications and Conference Presentations
     </h2>
     <div class="px-3">
 
