--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -135,12 +135,8 @@
               <div class="md-form my-0 mx-3 ">
                 <a href="https://logy.ai/" class="" style="font-weight:500 ;font-size: 12px;color: #5697d0;">HOME</a>
               </div>
-              <div class="md-form my-0 mx-3 ">
-                <a href="https://logy.ai/articles" class="text-white" style="font-weight:500 ;font-size: 12px;">ARTICLES</a>
-              </div>
-              <div class="md-form my-0 mx-3 ">
-                <a href="https://logy.ai/AutoML.html" class="text-white" style="font-weight:500 ;font-size: 12px;">AUTOML</a>
-              </div>
+              
+              
           
               <div class="md-form my-0 mx-3 ">
                 <style>
@@ -155,17 +151,23 @@
   
                 </style>
                 <div class="dropdown">
-                  <a class=" text-white dropdown-toggle" style="font-weight:500 ;font-size: 12px;" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  <a class=" text-white dropdown-toggle" style="font-weight:500 ;font-size: 12px;background: #212121 !important;color: white !important;" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     <b>PRODUCTS</b>
                   </a>
                   <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                    <a class="dropdown-item" href="https://logy.ai/myDentist">MYDENTIST</a>
+                    <a class="dropdown-item" href="https://logy.ai/myDentist.html">MYDENTIST</a>
              
                   </div>
                 </div>
               </div>
               <div class="md-form my-0 mx-3 ">
-                <a href="/publications/" class="text-white" style="font-weight:500 ;font-size: 12px;">PUBLICATIONS</a>
+                <a href="https://logy.ai/AutoML.html" class="text-white" style="font-weight:500 ;font-size: 12px;">AUTOML</a>
+              </div>
+              <div class="md-form my-0 mx-3 ">
+                <a href="https://logy.ai/articles" class="text-white" style="font-weight:500 ;font-size: 12px;">ARTICLES</a>
+              </div>
+              <div class="md-form my-0 mx-3 ">
+                <a href="https://logy.ai/publications" class="text-white" style="font-weight:500 ;font-size: 12px;">PUBLICATIONS</a>
               </div>
             </form>
           </div>
@@ -297,11 +299,18 @@
               <!-- Links -->
               <h6 class="text-uppercase font-weight-bold" id="foothot">Products</h6>
               <hr class=" mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
+              <p>
+                <a class="text-primary" id="footbot" href="https://logy.ai/myDentist.html">MyDentist.AI</a>
+              </p>
               <p >
-                  <a class="text-primary" id="footbot" href="https://logy.ai/portal.html">Dental AI</a>
+                <a class="text-primary" id="footbot" href="https://logy.ai/AutoML.html">AutoML</a>
+              </p>
+              
+              <p>
+                  <a class="text-primary" id="footbot" href="https://portal.logy.ai">AutoML Platform</a>
               </p>
               <p>
-                  <a class="text-primary" id="footbot" href="https://portal.logy.ai/">AutoML Platform</a>
+                        <a class="text-primary" id="footbot" href="https://logy.ai/documentation">API Documentation</a>
               </p>
             <!--  <p>
                   <a href="#!">Pricing</a>
