--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -100,7 +100,7 @@
 
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Logy.AI</title>
+    <title>Logy.AI | Publications</title>
 </head>
 <body>
 
